--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
     - docker build -t coffeesam1/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run coffeesam1/docker-react npm run test -- --coverage
+    - docker run -e CI=true coffeesam1/docker-react npm run test
